bad/field_access_non_class_type_string.example_compiler_output
ERROR
[1mbad/field_access_non_class_type_string.lat:3:4: [1;31merror: [0;1mtype `string` has no fields[m
	"".size;
	  [1;32m^[m
